--- a/templates/mother.html
+++ b/templates/mother.html
@@ -10,6 +10,6 @@
 
         <!--Write the correct link for image source in place of #. The images are present in the 
             static folder. If you dont like those images you can use your own as well-->
-        <img src = "static/mother.jpg" alt = "Reference your mothers image present in the static folder" width = "200"/>
+        <img src = "static/mother.jpeg" alt = "Reference your mothers image present in the static folder" width = "200"/>
     </body>
 </html>
